frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: makarovt/kafka-top-frontend
          ports:
            - containerPort: 4173
