frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - port: 4173
      targetPort: 4173
      protocol: TCP
